maybe fix burger menu on mobile phones

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -67,7 +67,7 @@ $border-color               : #66fcf1;
 // $text-color                 : $dark-gray;
 // $border-color               : $lighter-gray;
 
-$primary-color              : #f8f8ff;
+$primary-color              : #0b0c10;
 $success-color              : #66fcf1;
 $warning-color              : #d48872;
 $danger-color               : #ee5f5b;
